--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,22 @@
 body {
-  background: #f1fafe;
+  background-color: #f1fafe;
   font-family: "Roboto", sans-serif;
 }
 
 .weather-app {
   background-color: #ffffff;
   max-width: 600px;
-  margin: 30px auto;
+  margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
+}
+
+.search-form-input {
+  background-color: #f1fafe;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  padding: 15px 20px;
+  font-size: 16px;
 }
