--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,13 @@ body {
   padding: 15px 20px;
   font-size: 16px;
 }
+
+.search-form-button {
+  background-color: #8cd9ff;
+  color: #ffffff;
+  padding: 15px 30px;
+  font-size: 16px;
+  margin-left: 5px;
+  border: none;
+  border-radius: 6px;
+}
