--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+a {
+  color: #8cd9ff;
+}
+
 .weather-app {
   background-color: #ffffff;
   max-width: 600px;
@@ -10,6 +14,11 @@ body {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
+}
+
+header {
+  border-bottom: 1px solid #f1fafe;
+  margin: 0 0 30px 0;
 }
 
 .search-form-input {
@@ -29,4 +38,12 @@ body {
   margin-left: 5px;
   border: none;
   border-radius: 6px;
+}
+
+footer {
+  border-top: 1px solid #f1fafe;
+  margin: 30px 0 0 0;
+  text-align: center;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
 }
