--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,32 @@ header {
   border-radius: 6px;
 }
 
+main {
+  padding: 30px 0;
+}
+
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.weather-app-details {
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(39, 33, 66, 0.4);
+  font-weight: 500;
+}
+
+.weather-app-details strong {
+  color: #8cd9ff;
+}
+
 footer {
   border-top: 1px solid #f1fafe;
   margin: 30px 0 0 0;
