--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,26 @@ main {
   color: #8cd9ff;
 }
 
+.weather-app-temperature-container {
+  display: flex;
+}
+
+.weather-app-icon {
+  font-size: 44px;
+  margin-top: 22px;
+}
+
+.weather-app-temperature {
+  font-size: 88px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.weather-app-unit {
+  margin-top: 16px;
+  font-size: 28px;
+}
+
 footer {
   border-top: 1px solid #f1fafe;
   margin: 30px 0 0 0;
