--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ a {
 
 header {
   border-bottom: 1px solid #f1fafe;
-  margin: 0 0 30px 0;
+  padding-bottom: 30px;
 }
 
 .search-form-input {
@@ -88,7 +88,7 @@ main {
 
 footer {
   border-top: 1px solid #f1fafe;
-  margin: 30px 0 0 0;
+  padding-top: 30px;
   text-align: center;
   font-size: 12px;
   color: rgba(0, 0, 0, 0.6);
