--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,20 @@ main {
 .weather-forecast {
   margin-top: 20px;
   text-align: center;
+  color: #000000;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature {
+  font-size: 13px;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
 }
 
 footer {
