--- a/styles.css
+++ b/styles.css
@@ -89,22 +89,36 @@ main {
 }
 
 .weather-forecast {
-  margin-top: 20px;
   text-align: center;
   color: #000000;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
 }
 
 .weather-forecast-date {
   font-size: 16px;
   opacity: 0.5;
+  text-align: center;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
 }
 
-.weather-forecast-temperature {
+.weather-forecast-temperatures {
   font-size: 13px;
+  text-align: center;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
 }
 
+.weather-forecast-temperature-max {
+  color: #8cd9ff;
+}
 .weather-forecast-temperature-min {
   opacity: 0.5;
+  margin: 0 10px;
 }
 
 footer {
