--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,14 @@ main {
   margin-bottom: 10px;
 }
 
+.weather-forecast-icon {
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .weather-forecast-temperatures {
   font-size: 13px;
   text-align: center;
