--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ a {
 }
 
 .weather-app {
-  background-color: #ffffff;
+  background: white;
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -18,7 +18,7 @@ a {
 
 header {
   border-bottom: 1px solid #f1fafe;
-  padding-bottom: 30px;
+  padding: 0 0 30px 0;
 }
 
 .search-form-input {
@@ -26,18 +26,18 @@ header {
   border: none;
   border-radius: 6px;
   width: 80%;
-  padding: 15px 20px;
   font-size: 16px;
+  padding: 15px 20px;
 }
 
 .search-form-button {
-  background-color: #8cd9ff;
-  color: #ffffff;
+  background: #8cd9ff;
   padding: 15px 30px;
+  border: none;
   font-size: 16px;
   margin-left: 5px;
-  border: none;
   border-radius: 6px;
+  color: white;
 }
 
 main {
@@ -57,8 +57,8 @@ main {
 
 .weather-app-details {
   font-size: 16px;
-  line-height: 24px;
   color: rgba(39, 33, 66, 0.4);
+  line-height: 24px;
   font-weight: 500;
 }
 
@@ -73,14 +73,12 @@ main {
 .weather-app-icon {
   width: 88px;
   height: 88px;
-  line-height: 88px;
 }
 
 .weather-app-temperature {
   font-size: 88px;
   line-height: 88px;
   font-weight: bold;
-  margin-left: 10px;
 }
 
 .weather-app-unit {
@@ -89,17 +87,14 @@ main {
 }
 
 .weather-forecast {
-  text-align: center;
-  color: #000000;
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
 }
 
 .weather-forecast-date {
-  font-size: 16px;
-  opacity: 0.5;
   text-align: center;
+  color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 10px;
@@ -110,29 +105,27 @@ main {
   height: 88px;
   display: block;
   margin: 0 auto;
-  text-align: center;
 }
 
 .weather-forecast-temperatures {
-  font-size: 13px;
   text-align: center;
   margin-top: 10px;
   display: flex;
   justify-content: center;
+  font-size: 15px;
 }
-
-.weather-forecast-temperature-max {
+.weather-forecast-temperatures strong {
   color: #8cd9ff;
 }
-.weather-forecast-temperature-min {
-  opacity: 0.5;
-  margin: 0 10px;
+
+.weather-forecast-temperature {
+  padding: 0 5px;
 }
 
 footer {
   border-top: 1px solid #f1fafe;
-  padding-top: 30px;
+  padding: 30px 0 0 0;
   text-align: center;
-  font-size: 12px;
+  font-size: 13px;
   color: rgba(0, 0, 0, 0.6);
 }
